--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,11 @@
   height: 80px;
 }
 
+.App-logo:hover{
+  animation: App-logo-spin infinite 0.5s linear;
+  height: 180px;
+}
+
 .App-header {
   background-color: #222;
   height: 150px;
